--- a/config/locales/views/articles/en.yml
+++ b/config/locales/views/articles/en.yml
@@ -2,21 +2,26 @@
 en:
   views:
     articles:
+      answered: 🗸 Answered
+      solved: 🗸 Solved
+      notanswered: Not Answered
       meta:
-        description: An article from the community
+        description: A question from the community
       actions:
-        aria_label: Article actions
+        aria_label: Question actions
       comments:
-        aria_label: Comments for post %{title} (%{num})
-        subtitle_html: Discussion %{num}
+        aria_label: Answers for question %{title} (%{num})
+        subtitle_html: Answers %{num}
         num: "(%{num})"
+        featured_answer: ⭐ Featured Answer
         subscribe: Subscribe
+        deleted: Answer deleted
       conduct:
         aria_label: Conduct controls
         code: Code of Conduct
         report: Report abuse
       delete:
-        heading: Are you sure you want to delete this article?
+        heading: Are you sure you want to delete this question?
         desc:
           text_html: You cannot undo this action, perhaps you just want to %{action} instead?
           edit: edit
@@ -29,8 +34,8 @@ en:
       lock:
         meta:
           title: Confirm Discussion Lock
-        heading: Are you sure you want to lock the discussion on this post?
-        desc_html: Users will not be able to add new comments. This will <em class="fw-bold">not</em> remove existing comments. You can unlock the discussion at any time to allow users to leave comments again.
+        heading: Are you sure you want to lock the discussion on this question?
+        desc_html: Users will not be able to add new answers. This will <em class="fw-bold">not</em> remove existing answers. You can unlock the discussion at any time to allow users to answer again.
         cancel: Cancel
         notes:
           label: Notes (optional) - this is only visible to you and admins
@@ -40,7 +45,7 @@ en:
           placeholder: The reason why you're locking this discussion.
         submit: Lock discussion
       preview_discuss_html:
-        zero: New Discussion!
+        zero: New Answer!
         one: '#discuss <img src="%{image}" />%{count}'
         other: '#discuss <img src="%{image}" />%{count}'
       save:
@@ -63,25 +68,25 @@ en:
       unlock:
         meta:
           title: Confirm Discussion Unlock
-        heading: Are you sure you want to unlock the discussion on this post?
-        desc: Users will be able to add new comments. You can lock the discussion at any time to prevent users from leaving comments again.
+        heading: Are you sure you want to unlock the discussion on this question?
+        desc: Users will be able to add new answers. You can lock the discussion at any time to prevent users from answering again.
         cancel: Cancel
         notes: 'Notes from when this discussion was locked (only visible to you and admins):'
         reason: 'Reason this discussion was locked (publicly visible):'
         submit: Unlock discussion
       unpublished:
-        subtitle: Unpublished Post.
+        subtitle: Unpublished Question.
         text: " This URL is public but secret, so share at your own discretion."
         edit: Click to edit
       co_authors_html: with %{names}
       crossposted:
-        text_html: Originally published at %{url} %{on}
+        text_html: Originally asked at %{url} %{on}
         on_html: on %{date}
       edited: Updated on %{date}
       edited_html: Updated on %{date}
       for_org_html: "%{start} for %{end}%{org}"
-      missing: Article No Longer Available
-      posted_html: Posted on %{date}
+      missing: Question No Longer Available
+      posted_html: Asked on %{date}
       read_next: Read next
       reading_time:
         one: "1 min read"
