--- a/config/locales/views/comments/en.yml
+++ b/config/locales/views/comments/en.yml
@@ -3,75 +3,75 @@ en:
   views:
     comments:
       meta:
-        title_root: Discussion of %{title}
-        description: An article from the community
+        title_root: Answers of %{title}
+        description: A question from the community
         og:
-          title: Discussion of %{title}
+          title: Answers of %{title}
           title_rel: "%{root} — %{site}"
-          title_root: "[Discussion] %{title} — %{site}"
-          description: "%{site} Comment"
+          title_root: "[Answers] %{title} — %{site}"
+          description: "%{site} Answer"
       messages:
         create:
           success: created
-          failure: comment already exists
+          failure: answer already exists
         markdown: 'There was an error in your markdown: %{error}'
         markdown_html: "<p>😔 There was an error in your markdown</p><hr><p>%{error}</p>"
       parent:
-        subtitle_html: "%{start}Discussion on: %{end}%{title}"
+        subtitle_html: "%{start}Answers for: %{end}%{title}"
         metadata_html: "%{name}%{on}"
         date: " on %{date}"
-        full: Full discussion
-        read: Read full post
-        view: View post
+        full: All answers
+        read: Read full question
+        view: View question
         view_full:
-          one: View full discussion (%{count} comment)
-          other: View full discussion (%{count} comments)
-        reply_html: "%{start}Replies for:%{end} %{title}"
+          one: View all answers (%{count} comment)
+          other: View all answers (%{count} comments)
+        reply_html: "%{start}Answers for:%{end} %{title}"
       delete:
-        heading: Are you sure you want to delete this comment?
+        heading: Are you sure you want to delete this answer?
         desc_html: You cannot undo this action, perhaps you just want to %{action} instead?
         action: Edit
-        error: Something went wrong; Comment NOT deleted.
-        notice: Comment was successfully deleted.
+        error: Something went wrong; Answer NOT deleted.
+        notice: Answer was successfully deleted.
         submit: Delete
         edit: Edit
         cancel: Dismiss
       collapse: Collapse
-      edit: Editing comment
+      edit: Editing answer
       edited:
         text_html: "&bull; Edited %{on}"
         on_html: on %{date}
       expand: Expand
       hidden:
-        text_html: Some comments have been hidden by the post's author - %{info}
+        text_html: Some answers have been hidden by the question's author - %{info}
         info: find out more
       hider:
-        description_html: Are you sure you want to hide this comment? It will become hidden in your post, but will still be visible via the comment's %{permalink}.
-        hide_child: Hide child comments as well
+        description_html: Are you sure you want to hide this answer? It will become hidden in your question, but will still be visible via the answer's %{permalink}.
+        hide_child: Hide child answers as well
         note_html: For further actions, you may consider blocking this person and/or %{reporting}
         permalink: permalink
         reporting: reporting abuse
         submit: Confirm
-      locked: The discussion has been locked. New comments can't be added.
+      locked: The discussion has been locked. New answers can't be added.
       orphan:
-        deleted: "[Comment from a deleted post]"
+        deleted: "[Answer from a deleted question]"
       re:
         text_html: "%{re}%{title}"
         re: 'Re: '
       settings:
         meta:
-          title: Comment Settings
-        heading: Comment Settings
+          title: Answer Settings
+        heading: Answer Settings
         state:
           show:
             subtitle: Showing thread notifications
-            desc: You will receive all notifications for this comment and any of your comments in this chain.
+            desc: You will receive all notifications for this answer and any of your answers in this chain.
           mute:
             subtitle: Muting thread notifications
-            desc: All notifications for this comment and any of your comments in the thread are currently muted.
+            desc: All notifications for this answer and any of your answers in the thread are currently muted.
         subscribe:
           subtitle: Subscription
-          desc: You are still subscribed to all comments in the broader thread, which will mean you will still receive notifications for replies to this comment.
+          desc: You are still subscribed to all answers in the broader thread, which will mean you will still receive notifications for replies to this answer.
           mute: Mute notifications
           unmute: Unmute notifications
       quality:
@@ -80,15 +80,15 @@ en:
         hidden:
           icon: Info
           text:
-            visible_in_permalink: Comment hidden by post author - thread only visible in this permalink
-            accessible_via_permalink: Comment hidden by post author - thread only accessible via permalink
+            visible_in_permalink: Answer hidden by question author - thread only visible in this permalink
+            accessible_via_permalink: Answer hidden by question author - thread only accessible via permalink
       write:
         errors:
-          one: '1 error prohibited this comment from being saved:'
-          other: "%{count} errors prohibited this comment from being saved:"
+          one: '1 error prohibited this answer from being saved:'
+          other: "%{count} errors prohibited this answer from being saved:"
         field:
-          aria_label: Add a comment to the discussion
-          placeholder: Add to the discussion
+          aria_label: Answer the question
+          placeholder: Answer the question
           submit: Upload
           templates: Templates
           upload: Upload image
@@ -97,7 +97,7 @@ en:
             title: Markdown Guide
             icon: Editor guide
         template:
-          article: This post comes with a comment template
+          article: This question comes with an answer template
           create:
             subtitle: Create template
             desc: Templates let you quickly answer FAQs or store snippets for re-use.
@@ -110,24 +110,24 @@ en:
         aria_label: Toggle dropdown menu
         icon: Dropdown menu
         copy:
-          aria_label: Copy link to %{user}'s comment
+          aria_label: Copy link to %{user}'s answer
           text: Copy link
         settings:
-          aria_label: Go to %{user}'s comment settings
+          aria_label: Go to %{user}'s answer settings
         action:
-          aria_label: "%{action} %{user}'s comment"
+          aria_label: "%{action} %{user}'s answer"
           hide: Hide
           unhide: Unhide
           hide_text: Hide
           unhide_text: Unhide
         moderate:
-          aria_label: Moderate %{user}'s comment
+          aria_label: Moderate %{user}'s answer
         report:
-          aria_label: Report %{user}'s comment as abusive or violating our code of conduct and/or terms and conditions
+          aria_label: Report %{user}'s answer as abusive or violating our code of conduct and/or terms and conditions
       footer:
         heart:
           title: heart
-          icon: 'Like comment: '
+          icon: 'Like answer: '
           count_html: "%{num}%{likes}"
           text: Like
         reply:
@@ -143,13 +143,13 @@ en:
           icon: View button
           text: View
       count:
-        one: "%{count} comment"
-        other: "%{count} comments"
+        one: "%{count} answer"
+        other: "%{count} answers"
       empty: New
-      add: "Add\_Comment"
+      add: "Answer"
       summary:
         count_html:
-          one: "%{count}%{start}\_comment%{end}"
-          other: "%{count}%{start}\_comments%{end}"
-        title: Comments
+          one: "%{count}%{start}\_answer%{end}"
+          other: "%{count}%{start}\_answers%{end}"
+        title: Answers
 
