--- a/config/locales/views/editor/en.yml
+++ b/config/locales/views/editor/en.yml
@@ -3,10 +3,10 @@ en:
   views:
     editor:
       meta:
-        title: Edit Post
+        title: Edit Question
       heading:
-        new: New Post
-      create: Create Post
+        new: New Question
+      create: Ask Question
       close:
         icon: Close
         title: Close the editor
@@ -14,14 +14,14 @@ en:
         add: Add a cover image
         change: Change
       edit: Edit
-      modes: View post modes
-      new_title: New post title here...
+      modes: View question modes
+      new_title: New question title here...
       preview: Preview
       video:
         progress:
           heading: "⏳ Video Transcoding In Progress ⏳"
           notice_1: You'll get an email when this process finishes.
-          notice_2: This is an ordinary unpublished post. Add title/tags/body/etc, and then mark as published after the video is done processing.
+          notice_2: This is an ordinary unpublished question. Add title/tags/body/etc, and then mark as published after the video is done processing.
         submit_image:
           button: Submit Change
           text: 'Preview Image URL: '
