--- a/config/locales/views/main/en.yml
+++ b/config/locales/views/main/en.yml
@@ -67,5 +67,5 @@ en:
           text_html: Made with love and %{rails}. %{community} <span title="copyright">&copy;</span> %{copyright}.
           rails: Ruby on Rails
       home: Home
-      create_post: Create Post
+      create_post: Ask Question
       signout: Sign Out
