--- a/config/locales/views/settings/en.yml
+++ b/config/locales/views/settings/en.yml
@@ -31,14 +31,14 @@ en:
             Delete your profile, along with your authentication associations.
 
             This does not include applications permissions. You will have to remove them yourself:
-          desc1b: Delete any and all content you have, such as articles, comments, or your reading list.
+          desc1b: Delete any and all content you have, such as questions, answers, or your reading list.
           desc1c: Allow your username to become available to anyone.
           desc2_html: Please, %{provide} to fully delete your account.
           provide: provide an email
           submit: Delete Account
         export:
           heading: Export content
-          desc: You can request an export of all your content. Currently we only support the export of your posts and comments. They will be emailed to your inbox.
+          desc: You can request an export of all your content. Currently we only support the export of your questions and answers. They will be emailed to your inbox.
           label: Request an export of your content
           requested: You have recently requested an export of your content. Please check your email.
           submit: Submit Data Request
@@ -97,7 +97,7 @@ en:
         heading: Destroy your account
         desc: 'Deleting your account will:'
         desc_1_html: delete your profile, along with your Twitter and/or GitHub associations. This does not include app permissions. You will have to remove them yourself on %{twitter} and %{github}.
-        desc_2: delete any and all content you have, such as articles, comments, or your reading list.
+        desc_2: delete any and all content you have, such as questions, answers, or your reading list.
         desc_3: allow your username to become available to anyone.
         click: click here
         confirm_html: 'For confirmation, type the words: <code>%{word}</code>'
@@ -119,14 +119,14 @@ en:
           other: "%{count} errors prohibited your profile from being saved:"
       extensions:
         comment:
-          heading: Comment templates
-          desc_html: Create and save <strong>comment templates</strong> that you can reuse.
-          add: Add new comment template
+          heading: Answer templates
+          desc_html: Create and save <strong>answer templates</strong> that you can reuse.
+          add: Add new answer template
           confirm: 'Are you sure you want to delete: %{template}?'
           create: Create a new response template
           cue: Memorable cue for template
           edit: Edit
-          edit_template: Edit comment template
+          edit_template: Edit answer template
           remove: Remove
           save: Save template
           saved: Saved templates
@@ -136,11 +136,11 @@ en:
           desc1: Pin your GitHub repositories to your profile.
           desc2: Repositories will disappear from your profile if you remove the OAuth association with GitHub.
         learn: Learn more
-        micro: 'Receive micropayments for time spent reading your posts directly. '
+        micro: 'Receive micropayments for time spent reading your questions directly. '
         payment: Payment Pointer
         rss:
           heading: Publishing to %{community} from RSS
-          desc1_html: Posts will land in your %{dashboard} <strong>as drafts</strong>, and then you can publish from there.
+          desc1_html: Questions will land in your %{dashboard} <strong>as drafts</strong>, and then you can publish from there.
           desc2: Formatting will typically look good, but you may have to make manual fixes. In the case of Medium, you may have to manually fix embeds.
           desc3_html: To find out more about how drafts are created from your feed, read this %{guide}.
           desc4: Your feed will be fetched every time you submit this form and updates will be automatically fetched periodically thereafter.
@@ -150,8 +150,8 @@ en:
           fetch: Fetch feed now
           guide: guide
           last_html: 'Last Fetched: %{time}'
-          mark_canonical_html: Mark the RSS source as canonical URL by default <p class='crayons-field__description'>If you check this box, the post will automatically mark the feed source as the canonical URL.</p>
-          referential_html: Replace self-referential links with %{community}-specific links <p class='crayons-field__description'>If you check this box, the post will automatically change any URLs included in the post to refer to the version of that article on %{community} if available. This is primarily meant for folks migrating their entire blog onto %{community}.</p>
+          mark_canonical_html: Mark the RSS source as canonical URL by default <p class='crayons-field__description'>If you check this box, the question will automatically mark the feed source as the canonical URL.</p>
+          referential_html: Replace self-referential links with %{community}-specific links <p class='crayons-field__description'>If you check this box, the question will automatically change any URLs included in the question to refer to the version of that question on %{community} if available. This is primarily meant for folks migrating their entire blog onto %{community}.</p>
           save: Save Feed Settings
           submit: Submit Feed Settings
         save_web: Save Web Monetization Settings
@@ -181,7 +181,7 @@ en:
             icon: Copy to clipboard
             text: Copied to clipboard!
           cta: Call-to-action box
-          cta_desc: Customizable text that appears to the right of every post for your organization.
+          cta_desc: Customizable text that appears to the right of every question for your organization.
           delete:
             heading: Delete Organization
             confirm: 'Are you absolutely sure you want to delete your organization: %{name}?'
@@ -190,12 +190,12 @@ en:
               <ul>
                 <li>are the only member in the organization</li>
                 <li>are an admin of the organization</li>
-                <li>the organization has no posts</li>
+                <li>the organization has no questions</li>
                 <li>and the organization has no credits</li>
               </ul>
             submit: Delete "%{name}"
             questions_html: Questions? Email us at %{email} for help.
-            unmet: Your organization currently does not meet the above requirements. Please remove all other members and organization posts first.
+            unmet: Your organization currently does not meet the above requirements. Please remove all other members and organization questions first.
           details: Organization details
           form:
             slug: 'Your organization''s URL is: %{slug}'
