"Question(s) published" texts are converted into "Question(s) asked"

--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -80,7 +80,7 @@ en:
             %{url}
         article_published:
           body: |
-            New Question Published: %{title}
+            New Question Asked: %{title}
             %{url}
         feedback:
           anonymous_report: "*Anonymous report:"
