Answered and Solved icons have been changed, and trending guides/resources text converted into trending questions.

--- a/config/locales/views/articles/en.yml
+++ b/config/locales/views/articles/en.yml
@@ -2,9 +2,9 @@
 en:
   views:
     articles:
-      answered: 🗸 Answered
-      solved: 🗸 Solved
-      notanswered: Not Answered
+      answered: ✨ Answered
+      solved: 👌 Solved
+      notanswered: No Answer
       meta:
         description: A question from the community
       actions:
