Answered and Solved emojis have been changed. The suggestedAnswer itemprop has been removed from the deleted comments.

--- a/config/locales/views/articles/en.yml
+++ b/config/locales/views/articles/en.yml
@@ -2,8 +2,8 @@
 en:
   views:
     articles:
-      answered: ✨ Answered
-      solved: 👌 Solved
+      answered: 💭 Answered
+      solved: ⭐ Solved
       notanswered: No Answer
       meta:
         description: A question from the community
