Relevant section in feeds have been converted into Unanswered. In addition, surrogate lifespans have been returned 240 days again.

--- a/config/locales/views/stories/en.yml
+++ b/config/locales/views/stories/en.yml
@@ -16,6 +16,7 @@ en:
         aria_label: View questions by
         aria_tagged: View tagged questions by
         relevant: Relevant
+        unanswered: Unanswered
         week: Week
         month: Month
         year: Year
